Edit some image names, fix photo containers wrap issue, and add photos to galleries

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ html, body {
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height: auto;
-    max-height: 600px;
+    height: 600px;
+    max-height: 800px;
     min-height: 400px;
     display: flex;
     justify-content: center;
@@ -63,7 +63,7 @@ html, body {
 }
 
 .title, #link-title {
-    font-size: 48px;
+    font-size: 68px;
     margin: 20px;
     text-align: center;  
     font-family: 'Italiana';
@@ -75,7 +75,7 @@ html, body {
 
 .subtext {
     margin-bottom: 8px;
-    font-size: 18px;
+    font-size: 36px;
 }
 
 .quote-area {
@@ -157,7 +157,8 @@ html, body {
     align-items: center;
     font-size: 18px;
     text-align: center;
-    width: 40%;
+    width: 200px;
+    overflow: hidden;
 }
 
 .info-box {
